# timsort

./: CMakeLists.txt  README.md
cmake/: FindBenchmark.cmake
include/timsort/: timsort.h
test/: benchmark.cpp  simple-test.cpp
